# backend/src/modules/security-group-rules/dto/authorize-security-group-rule.dto.ts
@@ -1,0 +1,7 @@
+import { IsNotEmpty, IsString } from 'class-validator';
+
+export class AuthorizeSecurityGroupRuleDto {
+  @IsString()
+  @IsNotEmpty()
+  observation!: string;
+}
